[SYNCOPE-1610] Refactoring ReconQuery to work with FIQL (#234)